# odhug.github.com

./: .gitignore  CNAME  Index.html  README.md  blog.html  events.js  forum.html  index.html  rss.xml  update
css/: article.css  (+2 more)
source/: .Odhug.hs.LOCAL.2076.hs.swp  Heater.hs  Makefile  Odhug.hs  Odhug.hs.BACKUP.2076.hs  Odhug.hs.LOCAL.2256.hs  about.md  aboutf.md  events.js  hacaton.md  odhug.cabal  odhug.cabal~  stack.yaml
source/.stack-work/install/x86_64-linux/lts-3.8/7.10.2/flag-cache/: HTTP-4000.2.20-984ba8ccc20bac404eae90df29479449  HUnit-1.2.5.2-1e21f4df88328a638a2fe876d310faf2  JuicyPixels-3.2.6.1-2ff0871f18aff0075e95172e352791b4  MissingH-1.3.0.1-74d040f66b310e6c8759967e85fb12af  MonadCatchIO-transformers-0.3.1.3-b94e5ca0ddb82c91297d8a1c2dc7eaf4  SHA-1.6.4.2-97d4671480b5e0f062d39db089492814  StateVar-1.1.0.1-d26cc6243f7eb7d8194c4fd0dccc0689  aeson-0.8.0.2-7a3f19ffe84b0b29a145d1473c0ff764  (+121 more)
source/css/: app.css  article.css  blog.css  default.css
source/posts/: 2012-09-18-onuhs-announce.md  2012-10-02-announce.md  2012-11-06-announce.md  2012-12-13-announce.md  2013-01-06-announce.md  2013-01-12-january-announce.md  2013-01-15-january-meeting-report.md  2013-01-31-announce.md  2013-02-12-february-announce.md  2013-02-27-odhac.md  2013-02-28-announce.md  2013-04-02-announce.md  2013-06-17-announce.md  2013-07-13-announce.md  2013-08-07-announce.md  2013-09-16-announce.md  2013-10-03-announce.md  2013-10-19-report.md  2013-10-26-announce.md  2013-11-17-slides.md  2013-12-05-announcement.md  2014-01-15-announcement.md  2014-01-23-deferred.md  2015-01-16-announcement.md  2015-02-12-ann-master-class.md  2015-02-13-announcement.md  2015-02-16-announcement.md  2015-03-03-haskell-jazz.md  2015-03-15-announcement.md  2015-03-16-haskell-jazz-2.md  2015-11-15-announcement.md~  2015-11-19-announcement.md  2016-06-21-announcement.md
source/templates/: about.html  carousel.tpl  default.html  default.html.orig  defaultn.html  defaultn.html~  eventDescription.tmpl  events-js.tpl  events.js  events.tpl  forum.html  image-item.html  indefault.html  index.html  item.html  post-item.html  post.html  posts.html
(+52 files in other folders)
