name:                odhug
version:             0.9.2.0
synopsis:            OdHUG website generator
description:         
homepage:            haskell.od.ua
license:             AllRightsReserved
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           2012-2015 Sergey Bushnyak
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable Odhug
  main-is:             Odhug.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakyll
                     , old-locale
                     , pandoc
                     , time
                     , text
--                     , monads-tf
                     , containers
                     , errors
                     , json
                     , MissingH
                     , containers
                     , unordered-containers
                     , aeson
                     , mtl
  default-language:    Haskell2010
